Fix pool block spacing, sizing

--- a/src/client/scss/sections/litepaper.scss
+++ b/src/client/scss/sections/litepaper.scss
@@ -56,7 +56,7 @@
   }
 }
 .statistics_block {
-  .section_title {
+  .medium_title {
     margin: 0;
   }
   margin-top: 55px;
