--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -1,6 +1,6 @@
 .pools {
   background-color: $xdsGreyBlue;
-  width: 80%;
+  width: 87%;
   margin: 0 auto;
 }
 .all_pools_btn {
@@ -17,18 +17,20 @@
   letter-spacing: -0.02em;
   color: #ffffff;
 }
+$block-width: 380px;
 .pools_blocks {
-  width: 100%;
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, $block-width);
+  grid-column-gap: 2%;
+  justify-content: space-around;
+  @media(max-width: $screen-md) {
+    display: block;
+  }
 }
 .pool_block {
   margin-top: 65px;
-  min-height: 344px;
-  padding: 0px 15px;
+  max-width: $block-width;
+  padding: 23px 12px;
   background: $xdsVeryDarkBg;
   border: 2px solid $xdsAccent;
   backdrop-filter: blur(4px);
@@ -42,7 +44,6 @@
 .pool_block_title {
   display: flex;
   align-items: center;
-  margin-top: 10px;
   padding: 0px 20px;
   img {
     margin-right: 10px;
@@ -59,8 +60,8 @@
 .pool_info {
   background: $xdsGreyBlue;
   border-radius: 10px;
-  margin: 0 auto;
-  padding: 10px 20px;
+  margin: 20px 0px;
+  padding: 15px 20px 5px 20px;
   min-width: 350px;
 }
 .pool_info_top {
@@ -200,7 +201,7 @@
   }
 }
 .pool_info_btm {
-  margin-top: 50px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -228,8 +229,10 @@
     }
   }
 }
+.pool_info_btm.voting {
+  margin-top: 30px;
+}
 .pool_links {
-  margin-top: 15px;
   padding: 0 20px;
   display: flex;
   flex-direction: row;
